--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,25 +11,43 @@
   <body>
 
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="<%=root_path%>">OhMyGossip</a>
+ <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="<%=root_path%>">Oh My Gossip</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" href="<%=team_path%>">Team</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="<%=contact_path%>">Contact</a>
         </li>
-        <li class="nav-item">
+        </ul>
+      <ul class="navbar-nav ml-auto">
+      <% if session[:user_id] %>
+      <li class="nav-item">
           <a class="nav-link" href="<%=new_gossip_path%>">Créer un gossip</a>
         </li>
+        <li class="nav-item">
+        <%= link_to "Deconnexion", session_path(session.id), method: :delete, class: "nav-link" %>
+        </li>
+      <% else %>
+        <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          &#9776;
+        </button>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="<%=new_session_path%>">Connexion </a>
+          <a class="dropdown-item" href="<%=new_user_path%>">Inscription </a>
+        </div>
+      </div>         
+      <% end %>
       </ul>
     </div>
   </nav>
+
 
 
     <%= yield %>
