--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -2,5 +2,8 @@
 <p> <%= @gossips.find(@index).content %> </p>
 <p> <%= @gossips.find(@index).created_at.strftime("%d/%m/%Y") %> </p> 
 
+
+<% if User.find_by_id(session[:user_id]) == @gossip.user %>
 <a class="btn btn-primary" href="<%=edit_gossip_path(params[:id])%>" role="button">Modifier le potin</a>
-<p> <%= link_to 'Delete', gossip_path(@gossip.id), method: :delete, data: { confirm: 'Are you sure?' } %> </p>
+<p> <%= link_to 'Supprimer', gossip_path(@gossip.id), method: :delete, data: { confirm: 'Are you sure?' } %> </p>
+<% end %>
